fix buttons gap

--- a/src/app/common/modals/modals.less
+++ b/src/app/common/modals/modals.less
@@ -509,11 +509,11 @@
                         display: flex;
                         justify-content: flex-end;
                         align-items: flex-start;
-                        gap: 8px;
 
                         .wave-button {
                             padding: 4px 15px;
                             font-size: 11px;
+                            margin-right: 8px;
                         }
                     }
                 }
